<resources>
    <string name="app_name">Weather App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_location">Search Location</string>
    <string name="current_location">Current Location</string>
    <string name="wind">Gió</string>
    <string name="humidity">Độ ẩm</string>
    <string name="chance_of_rain">Khả năng mưa</string>
    <string name="location_icon" />
    <string name="warning_icon" />
    <string name="drawer_open">Mở menu</string>
    <string name="drawer_close">Đóng menu</string>

    <string name="location_display_format">%1$s, %2$s, %3$s</string>

    <string name="location_text">%1$s, %2$s, %3$s</string>
    <string name="delete_location">xóa vị trí</string>
    <string name="toggle_favorite">thêm vị trí yêu thích</string>
    <string name="edit_location">sửa vị trí</string>
    <string name="favorite_icon">yêu thích</string>
    <string name="add_location">Thêm vị trí</string>
    <string name="b_o_c_o_sai_v_tr">Báo cáo sai vị trí</string>
    <string name="language">Ngôn ngữ</string>
    <string name="english">English</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="notification_settings">Cài đặt thông báo</string>
    <string name="permissions">Quyền</string>
    <string name="weather_information">Thông tin về ứng dụng thời tiết</string>
    <string name="contact_us">Liên hệ chúng tôi</string>
    <string name="privacy_policy">Quyền riêng tư và bảo mật</string>
    <string name="use_fahrenheit">Đổi sang độ f</string>
    <string name="app_version">Version: %1$s</string>
    <string name="latest_version">Latest Version: %1$s</string>
</resources>